--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,7 +209,7 @@ video {
   width: 100vw;
   height: auto;
   margin: 50px auto;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .questions__title {
